--- a/styles/styles.css
+++ b/styles/styles.css
@@ -277,5 +277,19 @@ main .section.highlight {
   background-color: #ffeff2;
   max-width: 1200px;
   margin:auto;
+  .default-content-wrapper {
+    h1 {
+      position: relative;
+      box-sizing: border-box;
+      margin: 10px 0 30px 0;
+      border-bottom: 6px solid #1bac4a;
+      padding: 0 0 10px 0;
+      font-size: 2.1rem;
+      font-family: "Noto Sans JP";
+      font-weight: 600;
+      line-height: 1.5;
+      text-shadow: 0px 0px 0.1px rgba(51, 51, 51, 0.5);
+    }
+  }
 }
 
