--- a/styles/styles.css
+++ b/styles/styles.css
@@ -274,7 +274,6 @@ main .section.highlight {
 }
 
 .style1 {
-  background-color: #ffeff2;
   max-width: 1200px;
   margin:auto;
   .default-content-wrapper {
@@ -290,6 +289,9 @@ main .section.highlight {
       line-height: 1.5;
       text-shadow: 0px 0px 0.1px rgba(51, 51, 51, 0.5);
     }
+  }
+  .column-wrapper {
+    background-color: #ffeff2;
   }
 }
 
