--- a/styles/styles.css
+++ b/styles/styles.css
@@ -274,7 +274,8 @@ main .section.highlight {
 }
 
 
-
+/* -------------------------------------------------------------------------------- */
+/* added by tekaneko for Famima */
 .section.full-width > div {
   max-width: 1200px;
   margin: 0 auto;
@@ -285,16 +286,19 @@ main .section.highlight {
 }
 
 .section.style1 {
-  max-width: 1200px!important;
+  background-image: linear-gradient(-90deg, #bce5bd 0%, #82c384 50%, #aad2e7 50%, #aad2e7 100%);
+  padding-top: 0px;
+  padding-bottom: 0px;
+
   margin:auto;
   .section > div {
     max-width: 1200px!important;
   }
   .default-content-wrapper {
-    max-width: 1200px!important;
-    picture img {
-      width:100%;
-      max-width:1200px;
+    > p {
+      margin: auto;
+      text-align: center;
+      line-height: 0;
     }
     h1 {
       position: relative;
@@ -314,10 +318,29 @@ main .section.highlight {
   }
 }
 
+.section.camp-bg-white {
+    padding-top: 16px;
+    padding-bottom: 0px;
 
-/* すべての画像を大きく表示したい場合 */
-main img {
-  width: 100%;
-  max-width: 1200px; /* ここを希望のサイズに変更 */
-  height: auto;
-}
+    background:white;
+    color: #313131;
+    width: 750px;
+    margin: auto;
+    font-size: 0.93333rem;
+    line-height: 1.8;
+    h2 {
+      margin:12px;
+      background-color: #0171a6;
+      color: #fff;
+      line-height: 1.7;
+      font-size: 1.25rem;
+      font-weight: 700;
+      padding: 2px 10px 4px 20px;
+      margin-top: 40px;
+      margin-bottom: 15px !important;
+      border-radius: 50px;      
+    }
+  }
+
+
+
