--- a/styles/styles.css
+++ b/styles/styles.css
@@ -321,24 +321,27 @@ main .section.highlight {
 .section.camp-bg-white {
     padding-top: 16px;
     padding-bottom: 0px;
+    background-image: linear-gradient(-90deg, #bce5bd 0%, #82c384 50%, #aad2e7 50%, #aad2e7 100%);
 
-    background:white;
-    color: #313131;
-    width: 750px;
-    margin: auto;
-    font-size: 0.93333rem;
-    line-height: 1.8;
-    h2 {
-      margin:12px;
-      background-color: #0171a6;
-      color: #fff;
-      line-height: 1.7;
-      font-size: 1.25rem;
-      font-weight: 700;
-      padding: 2px 10px 4px 20px;
-      margin-top: 40px;
-      margin-bottom: 15px !important;
-      border-radius: 50px;      
+    .default-content-wrapper {
+      background:white;
+      color: #313131;
+      width: 750px;
+      margin: auto;
+      font-size: 0.93333rem;
+      line-height: 1.8;
+      h2 {
+        margin:12px;
+        background-color: #0171a6;
+        color: #fff;
+        line-height: 1.7;
+        font-size: 1.25rem;
+        font-weight: 700;
+        padding: 2px 10px 4px 20px;
+        margin-top: 40px;
+        margin-bottom: 15px !important;
+        border-radius: 50px;      
+      }
     }
   }
 
