--- a/styles/styles.css
+++ b/styles/styles.css
@@ -287,7 +287,7 @@ main .section.highlight {
 
 .section.style1 {
   .default-content-wrapper {
-    padding: 1px;
+    padding-top: 1px;
   }
 
   background-image: linear-gradient(-90deg, #bce5bd 0%, #82c384 50%, #aad2e7 50%, #aad2e7 100%);
@@ -343,8 +343,6 @@ main .section.highlight {
         font-size: 1.25rem;
         font-weight: 700;
         padding: 2px 10px 4px 20px;
-        margin-top: 40px;
-        margin-bottom: 15px !important;
         border-radius: 50px;      
       }
     }
