--- a/styles/styles.css
+++ b/styles/styles.css
@@ -285,12 +285,13 @@ main .section.highlight {
   }
 }
 
+main:has(.style1) {
+  background-image: linear-gradient(-90deg, #bce5bd 0%, #82c384 50%, #aad2e7 50%, #aad2e7 100%);
+}
 .section.style1 {
   .default-content-wrapper {
     padding-top: 1px;
   }
-
-  background-image: linear-gradient(-90deg, #bce5bd 0%, #82c384 50%, #aad2e7 50%, #aad2e7 100%);
   padding-top: 0px;
   padding-bottom: 0px;
 
@@ -326,7 +327,6 @@ main .section.highlight {
 .section.camp-bg-white {
     padding-top: 0px;
     padding-bottom: 0px;
-    background-image: linear-gradient(-90deg, #bce5bd 0%, #82c384 50%, #aad2e7 50%, #aad2e7 100%);
 
     .default-content-wrapper {
       background:white;
