--- a/styles/styles.css
+++ b/styles/styles.css
@@ -285,10 +285,10 @@ main .section.highlight {
   }
 }
 
-main:has(.style1) {
+main:has(.bg-bluegreen) {
   background-image: linear-gradient(-90deg, #bce5bd 0%, #82c384 50%, #aad2e7 50%, #aad2e7 100%);
 }
-.section.style1 {
+.section.bg-bluegreen {
   .default-content-wrapper {
     padding-top: 1px;
   }
