--- a/styles/styles.css
+++ b/styles/styles.css
@@ -289,10 +289,10 @@ main:has(.bg-bluegreen) {
   background-image: linear-gradient(-90deg, #bce5bd 0%, #82c384 50%, #aad2e7 50%, #aad2e7 100%);
 }
 main:has(.bg-greenblue) {
-  background-image: linear-gradient(-90deg, #aad2e7 50%, #aad2e7 100%, #bce5bd 0%, #82c384 50%);
+  background-image: linear-gradient(-90deg, #aad2e7 0%, #aad2e7 50%, #bce5bd 50%, #82c384 100%);
 }
 
-.section.bg-bluegreen {
+.section.bg-bluegreen, .section.bg-greenblue {
   .default-content-wrapper {
     padding-top: 1px;
   }
