--- a/styles/styles.css
+++ b/styles/styles.css
@@ -457,14 +457,28 @@ main:has(.bg-greenblue) {
     > div{
       align-items: unset!important;
       > div {
+        margin-bottom: 20px;
         background: #fff;
         border: 4px solid #d4af37;
         height: 100%;
         display: flex;
         flex-direction: column;
         position: relative;
+        width:48%;
+        > p:nth-child(3){
+          padding: 0px 10px 5px 10px;
+        }
+        > p {
+            margin: 0px;
+            line-height: 1.1;
+            font-size: smaller;
+            a {
+              color: black;
+            }
+          }
 
         >h2 {
+          padding: 0px 10px 0px 10px;
           font-size: clamp(0.9rem, 0.384rem + 1.12vw, 1.225rem);
           font-weight: bold;
           line-height: 1.5;
@@ -472,11 +486,33 @@ main:has(.bg-greenblue) {
           color: #000;
           a {
             color: #000;
+            border: unset!important;
+            border-radius: unset!important;
+          }
+        }
+        p.button-container {
+          margin-bottom: -6px;
+          a {
+            background: none;
+            color: black;
+            margin: 0px;
+            padding: 0px;
+            border: unset!important;
+            border-radius: unset!important;
+            font-weight: 100;
           }
         }
       }
-    } 
+    }
 
+
+  }
+
+
+  .default-content-wrapper {
+    li {
+      font-size: 1.06667rem;
+    }
   }
 }
 
