--- a/styles/styles.css
+++ b/styles/styles.css
@@ -513,6 +513,41 @@ main:has(.bg-greenblue) {
     li {
       font-size: 1.06667rem;
     }
+    .button-container {
+      a {
+        text-align: center !important;
+        position: relative;
+        display: block;
+        box-sizing: border-box;
+        margin-bottom: 10px;
+        border: 2px solid #ddd;
+        border-radius: 25px;
+        padding: 14px 40px 14px 44px;
+        background-color: #fff;
+        line-height: 1.2;
+        color: #0171a6;
+        font-size: 1.133333rem;
+        font-family: "Noto Sans JP";
+        font-weight: 800;
+        text-align: left;
+        text-decoration: none !important;
+        -webkit-transition: all 0.2s;
+        transition: all 0.2s;
+        text-shadow: 0px 0px 0.1px rgba(51, 51, 51, 0.5);
+      }
+      a::after {
+        left: 8px;
+        right: inherit;
+        content: '＜';
+        position: absolute;
+        top: 50%;
+        color: #0171a6;
+        font-family: "icn_font";
+        font-size: 1.86666rem;
+        font-weight: normal;
+        line-height: 0;
+      }
+    }
   }
 }
 
