--- a/styles/styles.css
+++ b/styles/styles.css
@@ -551,3 +551,24 @@ main:has(.bg-greenblue) {
   }
 }
 
+/* -------------------------------------------------------------------------------- */
+/* added by tekaneko for Camp-Style-1 */
+.section.camp-style-1 {
+  h1 {
+    position: relative;
+    box-sizing: border-box;
+    margin: 10px 0 30px 0;
+    border-bottom: 6px solid #1bac4a;
+    padding: 0 0 10px 0;
+    font-size: 2.1rem;
+    font-family: "Noto Sans JP";
+    font-weight: 600;
+    line-height: 1.5;
+    text-shadow: 0px 0px 0.1px rgba(51, 51, 51, 0.5);
+  }
+  .fragment-wrapper {
+    @media (width >=900px) {
+      max-width: 1100px;
+    }
+  }
+}
