--- a/styles/styles.css
+++ b/styles/styles.css
@@ -566,9 +566,9 @@ main:has(.bg-greenblue) {
     line-height: 1.5;
     text-shadow: 0px 0px 0.1px rgba(51, 51, 51, 0.5);
   }
-  .fragment-wrapper {
+  .default-content-wrapper {
     @media (width >=900px) {
-      max-width: 1100px;
+      max-width: 1200px;
     }
   }
 }
