--- a/styles/styles.css
+++ b/styles/styles.css
@@ -560,7 +560,7 @@ main:has(.bg-greenblue) {
     margin: 10px 0 30px 0;
     border-bottom: 6px solid #1bac4a;
     padding: 0 0 10px 0;
-    font-size: 2.1rem;
+    font-size: 2.0rem;
     font-family: "Noto Sans JP";
     font-weight: 600;
     line-height: 1.5;
@@ -569,6 +569,78 @@ main:has(.bg-greenblue) {
   .default-content-wrapper {
     @media (width >=900px) {
       max-width: 1200px;
+    }
+    img {
+      width: 100%;
+    }
+    .button-container {
+      a {
+        text-align: center !important;
+        position: relative;
+        display: block;
+        box-sizing: border-box;
+        margin-bottom: 10px;
+        border: 2px solid #ddd;
+        border-radius: 25px;
+        padding: 14px 40px 14px 44px;
+        background-color: #fff;
+        line-height: 1.2;
+        color: #0171a6;
+        font-size: 1.133333rem;
+        font-family: "Noto Sans JP";
+        font-weight: 800;
+        text-align: left;
+        text-decoration: none !important;
+        -webkit-transition: all 0.2s;
+        transition: all 0.2s;
+        text-shadow: 0px 0px 0.1px rgba(51, 51, 51, 0.5);
+      }
+      a::after {
+        left: 8px;
+        right: inherit;
+        content: '＜';
+        position: absolute;
+        top: 50%;
+        color: #0171a6;
+        font-family: "icn_font";
+        font-size: 1.86666rem;
+        font-weight: normal;
+        line-height: 0;
+      }
+    }    
+
+  }
+}
+
+.section.camp-style-1-bg-white {
+  width: 1200px;
+  margin: auto;
+  background-image: linear-gradient(90deg, #CFDFEF, #E1F0DD);
+
+  .default-content-wrapper {
+    width: 1150px;
+    padding: 30px;
+    background: white;
+    border-radius: 30px;
+    h2 {
+        margin:0px;
+        background-color: #0171a6;
+        color: #fff;
+        line-height: 1.7;
+        font-size: 1.25rem;
+        font-weight: 700;
+        padding: 4px 8px 4px 15px;
+        border-radius: 50px;      
+    }
+    p {
+      font-size: smaller;
+    }
+    ul {
+      li {
+        font-size: smaller;
+        color: #313131;
+        text-shadow: 0px 0px 0.1px rgba(51, 51, 51, 0.5);
+      }
     }
   }
 }
