--- a/styles/styles.css
+++ b/styles/styles.css
@@ -394,6 +394,35 @@ main:has(.bg-greenblue) {
       }
 
   }
+/* -------------------------------------------------------------------------------- */
+/* added by tekaneko for page List = Campaign List */
+.page-list-container {
+  max-width: 1200px;
+  margin:auto;
+  h1 {
+    position: relative;
+    box-sizing: border-box;
+    margin: 10px 0 30px 0;
+    border-bottom: 6px solid #1bac4a;
+    padding: 0 0 10px 0;
+    font-size: 2.1rem;
+    font-family: "Noto Sans JP";
+    font-weight: 600;
+    line-height: 1.5;
+    text-shadow: 0px 0px 0.1px rgba(51, 51, 51, 0.5);
+  }
+  h2 {
+    position: relative;
+    box-sizing: border-box;
+    margin: 10px 0 30px 0;
+    padding: 0 0 10px 0;
+    font-size: 1.5rem;
+    font-family: "Noto Sans JP";
+    font-weight: 600;
+    line-height: 1.5;
+    text-shadow: 0px 0px 0.1px rgba(51, 51, 51, 0.5);
+  }
+}
 
 /* -------------------------------------------------------------------------------- */
 /* added by tekaneko for Fami Matsuken */
