--- a/styles/styles.css
+++ b/styles/styles.css
@@ -415,6 +415,7 @@ main:has(.bg-greenblue) {
     position: relative;
     box-sizing: border-box;
     margin: 10px 0 30px 0;
+    border-bottom: 1px solid #1bac4a;
     padding: 0 0 10px 0;
     font-size: 1.5rem;
     font-family: "Noto Sans JP";
